# engineering-harness

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  MANIFEST.in  PROTOCOL.md  README.md  eh.cmd  eh.ps1  install.cmd  install.ps1  pyproject.toml  setup.py
.github/workflows/: ci.yml
assets/templates/: AGENTS.md  current-task.md
assets/templates/DECISIONS/: INDEX.md
assets/templates/agents/: architect-contract.md  goal-controller.md  integration-release.md  orchestrator.md  reviewer.md  test.md
assets/templates/docs/: architecture.md  branching.md  delivery-overview.md  deployment-operations.md  error-journal.md  production-readiness.md  readiness.md  requirements.md  verification.md
assets/templates/harness/: verification.json
assets/templates/skills/: clarify.md  commit.md  goal.md  handoff.md  initiative.md  plan.md  review.md  start.md
docs/superpowers/plans/: 2026-07-13-engineering-harness-productization.md  2026-07-16-goal-mode.md  (+1 more)
integrations/claude/: README.md
integrations/codex/: README.md
integrations/cursor/: README.md
integrations/generic/: README.md
protocol/references/: anti-patterns.md  branching.md  dispatch.md  gates.md  glossary.md  goals.md  intent.md  layout.md  levels.md  lifecycle.md  phases.md  prompts.md  roles.md  schemas.md  session.md
scripts/: audit.ps1  audit.sh  eh.cmd  eh.ps1  init.ps1  init.sh
src/engineering_harness/: __init__.py  __main__.py  audit.py  branch.py  check.py  cli.py  init.py  migrate.py  paths.py
tests/: test_goal_semantics.py  test_structure.py  wheel_consumer_smoke.py
(+42 files in other folders)
